--- a/index.css
+++ b/index.css
@@ -1,17 +1,16 @@
 h1 {
     text-align: center;
-    font-size: 5em;
+    font-size: clamp(2em, 4vw, 5em);
 }
 
 h2 {
     text-align: center;
-    font-size: 3em;
+    font-size: clamp(1.6em, 2vw, 2.5em);
 }
 
 .question {
-    margin-left: 2em;
-    margin-top: 1em;
-    font-size: 2em;
+    margin: 0.5em 1em;
+    font-size: clamp(1em, 1.5vw, 2em);
 }
 
 .radio_wrap {
@@ -68,11 +67,4 @@ body {
 .question_wrap {
     position: relative;
     z-index: 1;
-}
-
-#tree {
-    position: absolute;
-    top: 250px;
-    right: 100px;
-    z-index: 2;
 }
